name:          ham-codec
version:       0.1.0

author:        Marc.Fontaine@gmx.de
maintainer:    Marc.Fontaine@gmx.de

category:      HAM, JT65
synopsis:      the JT65 codec
description:
  A fun pure Haskell implementation of the JT65 codec.
            
license:       BSD3
license-file:  LICENSE

cabal-version: >= 1.24
build-type:    Simple

library
  default-language: Haskell2010
  
  hs-source-dirs: src

  exposed-modules:
      Codec.JT65
    , Codec.PackJT
    , Codec.MsgJT
    , Codec.PackISO
    , Codec.PackJTExtern
    , Codec.AFSK
    , Codec.Test
  build-depends:
      base
    , containers
    , array
    , bytestring
    , time
    , process
    , vector
    , QuickCheck
    , cabal-test-quickcheck    
  ghc-options: -Wall -O2
