name:          ham-codec
version:       0.1.2

author:        Marc.Fontaine 2017-2018
maintainer:    Marc.Fontaine@gmx.de

category:      HAM, JT65
synopsis:      the JT65 codec
description:
  A Haskell implementation of the JT65 codec.
            
license:       BSD3
license-file:  LICENSE

cabal-version: 1.24
build-type:    Simple

source-repository head
  type:     git
  location: git://github.com/MarcFontaine/ham-codec
               
library
  default-language: Haskell2010
  
  hs-source-dirs: src

  exposed-modules: Codec.JT65
  exposed-modules: Codec.PackJT
  exposed-modules: Codec.MsgJT
  exposed-modules: Codec.PackISO
  exposed-modules: Codec.PackJTExtern
  exposed-modules: Codec.AFSK
  exposed-modules: Codec.Test
  build-depends: base < 4.12
  build-depends: containers
  build-depends: array
  build-depends: bytestring
  build-depends: time
  build-depends: process
  build-depends: vector
  build-depends: QuickCheck
  build-depends: microlens
  build-depends: microlens-th              
  ghc-options: -Wall -O2

test-suite jt65-specs
  type:       exitcode-stdio-1.0 
  default-language: Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  build-depends: base < 4.12
  build-depends: QuickCheck
  build-depends: hspec  
  build-depends: ham-codec
